--- a/.github/workflows/auto_compile_on_new_release.yml
+++ b/.github/workflows/auto_compile_on_new_release.yml
@@ -10,6 +10,9 @@ jobs:
 
         steps:
             - uses: actions/checkout@v4
+            - uses: actions-rs/toolchain@v1
+              with:
+                toolchain: stable
 
             - name: build
               run: cargo build --verbose --release
