--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -1,4 +1,4 @@
-name: test on dev push
+name: test on push
 
 on:
     push:
@@ -10,6 +10,9 @@ jobs:
 
         steps:
             - uses: actions/checkout@v4
+            - uses: actions-rs/toolchain@v1
+              with:
+                toolchain: stable
 
             - name: build
               run: cargo build --verbose --release
